cmake_minimum_required(VERSION 2.8.9)
project (ProtobufTest)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ../TestMap.proto)
include_directories(googletest/googletest/include)
include_directories(googletest/googlemock/include)
include_directories(../)
link_directories(/Users/bill/GoogleTestExample/googletest/build/lib)
add_executable(ProtobufTest main.cpp ../TestMapBuilder.cpp ../TestMap.pb.cc)
target_link_libraries(ProtobufTest gtest)
target_link_libraries(ProtobufTest gtest_main)
target_link_libraries(ProtobufTest gmock)
target_link_libraries(ProtobufTest pthread)
TARGET_LINK_LIBRARIES(ProtobufTest ${PROTOBUF_LIBRARY})